parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instrukcje
Rule 2     instrukcje -> instrukcja instrukcje
Rule 3     instrukcje -> instrukcja
Rule 4     instrukcja -> deklaracja
Rule 5     instrukcja -> funkcja
Rule 6     instrukcja -> petla
Rule 7     instrukcja -> warunek
Rule 8     instrukcja -> wypisz
Rule 9     instrukcja -> zwroc
Rule 10    instrukcja -> przypisz
Rule 11    instrukcja -> wywolanie
Rule 12    instrukcja -> instr_warunkowa
Rule 13    instrukcja -> wpisz
Rule 14    deklaracja -> ZALOZMY IDENTYFIKATOR ROWNE wyrazenie SEMIKOLON
Rule 15    deklaracja -> ZALOZMY IDENTYFIKATOR ROWNE wywolanie SEMIKOLON
Rule 16    przypisz -> IDENTYFIKATOR PRZYPISZ wyrazenie SEMIKOLON
Rule 17    przypisz -> IDENTYFIKATOR LA LICZBA RA PRZYPISZ wyrazenie SEMIKOLON
Rule 18    funkcja -> FUNKCJA IDENTYFIKATOR LP parametry RP DWUKROPEK blok
Rule 19    parametry -> IDENTYFIKATOR PRZECINEK parametry
Rule 20    parametry -> LICZBA PRZECINEK parametry
Rule 21    parametry -> wyrazenie PRZECINEK parametry
Rule 22    parametry -> wyrazenie
Rule 23    parametry -> <empty>
Rule 24    tablica -> LA parametry RA
Rule 25    blok -> LB instrukcje RB
Rule 26    petla -> DOPUKI LP warunek RP DWUKROPEK blok
Rule 27    instr_warunkowa -> JEZELI LP warunek RP DWUKROPEK blok W_PRZECIWNYM_WYPADKU DWUKROPEK blok
Rule 28    instr_warunkowa -> JEZELI LP warunek RP DWUKROPEK blok
Rule 29    warunek -> wyrazenie PODZIELONE_PRZEZ wyrazenie
Rule 30    warunek -> wyrazenie MNIEJSZE_OD wyrazenie
Rule 31    warunek -> wyrazenie WIEKSZE_OD wyrazenie
Rule 32    warunek -> wyrazenie WYNOSI wyrazenie
Rule 33    warunek -> wyrazenie ROZNE wyrazenie
Rule 34    warunek -> IDENTYFIKATOR
Rule 35    warunek -> LICZBA
Rule 36    wyrazenie -> wyrazenie PLUS wyrazenie
Rule 37    wyrazenie -> wyrazenie MINUS wyrazenie
Rule 38    wyrazenie -> wyrazenie RAZY wyrazenie
Rule 39    wyrazenie -> wyrazenie PODZIELONE_PRZEZ wyrazenie
Rule 40    wyrazenie -> wyrazenie MNIEJSZE_OD wyrazenie
Rule 41    wyrazenie -> wyrazenie WIEKSZE_OD wyrazenie
Rule 42    wyrazenie -> wyrazenie WYNOSI wyrazenie
Rule 43    wyrazenie -> wyrazenie ROZNE wyrazenie
Rule 44    wyrazenie -> wywolanie
Rule 45    wyrazenie -> IDENTYFIKATOR
Rule 46    wyrazenie -> LICZBA
Rule 47    wyrazenie -> tablica
Rule 48    wyrazenie -> TEKST
Rule 49    wyrazenie -> IDENTYFIKATOR LA LICZBA RA
Rule 50    wypisz -> WYPISZ LP wyrazenie RP SEMIKOLON
Rule 51    wypisz -> WYPISZ LP wywolanie RP SEMIKOLON
Rule 52    zwroc -> ZWROC LP wyrazenie RP SEMIKOLON
Rule 53    zwroc -> ZWROC LP wywolanie RP SEMIKOLON
Rule 54    wywolanie -> IDENTYFIKATOR LP parametry RP
Rule 55    wpisz -> WPISZ IDENTYFIKATOR SEMIKOLON

Terminals, with rules where they appear

DOPUKI               : 26
DWUKROPEK            : 18 26 27 27 28
FUNKCJA              : 18
IDENTYFIKATOR        : 14 15 16 17 18 19 34 45 49 54 55
JEZELI               : 27 28
LA                   : 17 24 49
LB                   : 25
LICZBA               : 17 20 35 46 49
LP                   : 18 26 27 28 50 51 52 53 54
MINUS                : 37
MNIEJSZE_OD          : 30 40
PLUS                 : 36
PODZIELONE_PRZEZ     : 29 39
PRZECINEK            : 19 20 21
PRZYPISZ             : 16 17
RA                   : 17 24 49
RAZY                 : 38
RB                   : 25
ROWNE                : 14 15
ROZNE                : 33 43
RP                   : 18 26 27 28 50 51 52 53 54
SEMIKOLON            : 14 15 16 17 50 51 52 53 55
TEKST                : 48
WIEKSZE_OD           : 31 41
WPISZ                : 55
WYNOSI               : 32 42
WYPISZ               : 50 51
W_PRZECIWNYM_WYPADKU : 27
ZALOZMY              : 14 15
ZWROC                : 52 53
error                : 

Nonterminals, with rules where they appear

blok                 : 18 26 27 27 28
deklaracja           : 4
funkcja              : 5
instr_warunkowa      : 12
instrukcja           : 2 3
instrukcje           : 1 2 25
parametry            : 18 19 20 21 24 54
petla                : 6
program              : 0
przypisz             : 10
tablica              : 47
warunek              : 7 26 27 28
wpisz                : 13
wypisz               : 8
wyrazenie            : 14 16 17 21 22 29 29 30 30 31 31 32 32 33 33 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 50 52
wywolanie            : 11 15 44 51 53
zwroc                : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instrukcje
    (2) instrukcje -> . instrukcja instrukcje
    (3) instrukcje -> . instrukcja
    (4) instrukcja -> . deklaracja
    (5) instrukcja -> . funkcja
    (6) instrukcja -> . petla
    (7) instrukcja -> . warunek
    (8) instrukcja -> . wypisz
    (9) instrukcja -> . zwroc
    (10) instrukcja -> . przypisz
    (11) instrukcja -> . wywolanie
    (12) instrukcja -> . instr_warunkowa
    (13) instrukcja -> . wpisz
    (14) deklaracja -> . ZALOZMY IDENTYFIKATOR ROWNE wyrazenie SEMIKOLON
    (15) deklaracja -> . ZALOZMY IDENTYFIKATOR ROWNE wywolanie SEMIKOLON
    (18) funkcja -> . FUNKCJA IDENTYFIKATOR LP parametry RP DWUKROPEK blok
    (26) petla -> . DOPUKI LP warunek RP DWUKROPEK blok
    (29) warunek -> . wyrazenie PODZIELONE_PRZEZ wyrazenie
    (30) warunek -> . wyrazenie MNIEJSZE_OD wyrazenie
    (31) warunek -> . wyrazenie WIEKSZE_OD wyrazenie
    (32) warunek -> . wyrazenie WYNOSI wyrazenie
    (33) warunek -> . wyrazenie ROZNE wyrazenie
    (34) warunek -> . IDENTYFIKATOR
    (35) warunek -> . LICZBA
    (50) wypisz -> . WYPISZ LP wyrazenie RP SEMIKOLON
    (51) wypisz -> . WYPISZ LP wywolanie RP SEMIKOLON
    (52) zwroc -> . ZWROC LP wyrazenie RP SEMIKOLON
    (53) zwroc -> . ZWROC LP wywolanie RP SEMIKOLON
    (16) przypisz -> . IDENTYFIKATOR PRZYPISZ wyrazenie SEMIKOLON
    (17) przypisz -> . IDENTYFIKATOR LA LICZBA RA PRZYPISZ wyrazenie SEMIKOLON
    (54) wywolanie -> . IDENTYFIKATOR LP parametry RP
    (27) instr_warunkowa -> . JEZELI LP warunek RP DWUKROPEK blok W_PRZECIWNYM_WYPADKU DWUKROPEK blok
    (28) instr_warunkowa -> . JEZELI LP warunek RP DWUKROPEK blok
    (55) wpisz -> . WPISZ IDENTYFIKATOR SEMIKOLON
    (36) wyrazenie -> . wyrazenie PLUS wyrazenie
    (37) wyrazenie -> . wyrazenie MINUS wyrazenie
    (38) wyrazenie -> . wyrazenie RAZY wyrazenie
    (39) wyrazenie -> . wyrazenie PODZIELONE_PRZEZ wyrazenie
    (40) wyrazenie -> . wyrazenie MNIEJSZE_OD wyrazenie
    (41) wyrazenie -> . wyrazenie WIEKSZE_OD wyrazenie
    (42) wyrazenie -> . wyrazenie WYNOSI wyrazenie
    (43) wyrazenie -> . wyrazenie ROZNE wyrazenie
    (44) wyrazenie -> . wywolanie
    (45) wyrazenie -> . IDENTYFIKATOR
    (46) wyrazenie -> . LICZBA
    (47) wyrazenie -> . tablica
    (48) wyrazenie -> . TEKST
    (49) wyrazenie -> . IDENTYFIKATOR LA LICZBA RA
    (24) tablica -> . LA parametry RA

    ZALOZMY         shift and go to state 14
    FUNKCJA         shift and go to state 17
    DOPUKI          shift and go to state 18
    IDENTYFIKATOR   shift and go to state 15
    LICZBA          shift and go to state 19
    WYPISZ          shift and go to state 20
    ZWROC           shift and go to state 21
    JEZELI          shift and go to state 23
    WPISZ           shift and go to state 24
    TEKST           shift and go to state 26
    LA              shift and go to state 22

    program                        shift and go to state 1
    instrukcje                     shift and go to state 2
    instrukcja                     shift and go to state 3
    deklaracja                     shift and go to state 4
    funkcja                        shift and go to state 5
    petla                          shift and go to state 6
    warunek                        shift and go to state 7
    wypisz                         shift and go to state 8
    zwroc                          shift and go to state 9
    przypisz                       shift and go to state 10
    wywolanie                      shift and go to state 11
    instr_warunkowa                shift and go to state 12
    wpisz                          shift and go to state 13
    wyrazenie                      shift and go to state 16
    tablica                        shift and go to state 25

state 1

    (0) S' -> program .



state 2

    (1) program -> instrukcje .

    $end            reduce using rule 1 (program -> instrukcje .)


state 3

    (2) instrukcje -> instrukcja . instrukcje
    (3) instrukcje -> instrukcja .
    (2) instrukcje -> . instrukcja instrukcje
    (3) instrukcje -> . instrukcja
    (4) instrukcja -> . deklaracja
    (5) instrukcja -> . funkcja
    (6) instrukcja -> . petla
    (7) instrukcja -> . warunek
    (8) instrukcja -> . wypisz
    (9) instrukcja -> . zwroc
    (10) instrukcja -> . przypisz
    (11) instrukcja -> . wywolanie
    (12) instrukcja -> . instr_warunkowa
    (13) instrukcja -> . wpisz
    (14) deklaracja -> . ZALOZMY IDENTYFIKATOR ROWNE wyrazenie SEMIKOLON
    (15) deklaracja -> . ZALOZMY IDENTYFIKATOR ROWNE wywolanie SEMIKOLON
    (18) funkcja -> . FUNKCJA IDENTYFIKATOR LP parametry RP DWUKROPEK blok
    (26) petla -> . DOPUKI LP warunek RP DWUKROPEK blok
    (29) warunek -> . wyrazenie PODZIELONE_PRZEZ wyrazenie
    (30) warunek -> . wyrazenie MNIEJSZE_OD wyrazenie
    (31) warunek -> . wyrazenie WIEKSZE_OD wyrazenie
    (32) warunek -> . wyrazenie WYNOSI wyrazenie
    (33) warunek -> . wyrazenie ROZNE wyrazenie
    (34) warunek -> . IDENTYFIKATOR
    (35) warunek -> . LICZBA
    (50) wypisz -> . WYPISZ LP wyrazenie RP SEMIKOLON
    (51) wypisz -> . WYPISZ LP wywolanie RP SEMIKOLON
    (52) zwroc -> . ZWROC LP wyrazenie RP SEMIKOLON
    (53) zwroc -> . ZWROC LP wywolanie RP SEMIKOLON
    (16) przypisz -> . IDENTYFIKATOR PRZYPISZ wyrazenie SEMIKOLON
    (17) przypisz -> . IDENTYFIKATOR LA LICZBA RA PRZYPISZ wyrazenie SEMIKOLON
    (54) wywolanie -> . IDENTYFIKATOR LP parametry RP
    (27) instr_warunkowa -> . JEZELI LP warunek RP DWUKROPEK blok W_PRZECIWNYM_WYPADKU DWUKROPEK blok
    (28) instr_warunkowa -> . JEZELI LP warunek RP DWUKROPEK blok
    (55) wpisz -> . WPISZ IDENTYFIKATOR SEMIKOLON
    (36) wyrazenie -> . wyrazenie PLUS wyrazenie
    (37) wyrazenie -> . wyrazenie MINUS wyrazenie
    (38) wyrazenie -> . wyrazenie RAZY wyrazenie
    (39) wyrazenie -> . wyrazenie PODZIELONE_PRZEZ wyrazenie
    (40) wyrazenie -> . wyrazenie MNIEJSZE_OD wyrazenie
    (41) wyrazenie -> . wyrazenie WIEKSZE_OD wyrazenie
    (42) wyrazenie -> . wyrazenie WYNOSI wyrazenie
    (43) wyrazenie -> . wyrazenie ROZNE wyrazenie
    (44) wyrazenie -> . wywolanie
    (45) wyrazenie -> . IDENTYFIKATOR
    (46) wyrazenie -> . LICZBA
    (47) wyrazenie -> . tablica
    (48) wyrazenie -> . TEKST
    (49) wyrazenie -> . IDENTYFIKATOR LA LICZBA RA
    (24) tablica -> . LA parametry RA

    $end            reduce using rule 3 (instrukcje -> instrukcja .)
    RB              reduce using rule 3 (instrukcje -> instrukcja .)
    ZALOZMY         shift and go to state 14
    FUNKCJA         shift and go to state 17
    DOPUKI          shift and go to state 18
    IDENTYFIKATOR   shift and go to state 15
    LICZBA          shift and go to state 19
    WYPISZ          shift and go to state 20
    ZWROC           shift and go to state 21
    JEZELI          shift and go to state 23
    WPISZ           shift and go to state 24
    TEKST           shift and go to state 26
    LA              shift and go to state 22

    instrukcja                     shift and go to state 3
    instrukcje                     shift and go to state 27
    deklaracja                     shift and go to state 4
    funkcja                        shift and go to state 5
    petla                          shift and go to state 6
    warunek                        shift and go to state 7
    wypisz                         shift and go to state 8
    zwroc                          shift and go to state 9
    przypisz                       shift and go to state 10
    wywolanie                      shift and go to state 11
    instr_warunkowa                shift and go to state 12
    wpisz                          shift and go to state 13
    wyrazenie                      shift and go to state 16
    tablica                        shift and go to state 25

state 4

    (4) instrukcja -> deklaracja .

    ZALOZMY         reduce using rule 4 (instrukcja -> deklaracja .)
    FUNKCJA         reduce using rule 4 (instrukcja -> deklaracja .)
    DOPUKI          reduce using rule 4 (instrukcja -> deklaracja .)
    IDENTYFIKATOR   reduce using rule 4 (instrukcja -> deklaracja .)
    LICZBA          reduce using rule 4 (instrukcja -> deklaracja .)
    WYPISZ          reduce using rule 4 (instrukcja -> deklaracja .)
    ZWROC           reduce using rule 4 (instrukcja -> deklaracja .)
    JEZELI          reduce using rule 4 (instrukcja -> deklaracja .)
    WPISZ           reduce using rule 4 (instrukcja -> deklaracja .)
    TEKST           reduce using rule 4 (instrukcja -> deklaracja .)
    LA              reduce using rule 4 (instrukcja -> deklaracja .)
    $end            reduce using rule 4 (instrukcja -> deklaracja .)
    RB              reduce using rule 4 (instrukcja -> deklaracja .)


state 5

    (5) instrukcja -> funkcja .

    ZALOZMY         reduce using rule 5 (instrukcja -> funkcja .)
    FUNKCJA         reduce using rule 5 (instrukcja -> funkcja .)
    DOPUKI          reduce using rule 5 (instrukcja -> funkcja .)
    IDENTYFIKATOR   reduce using rule 5 (instrukcja -> funkcja .)
    LICZBA          reduce using rule 5 (instrukcja -> funkcja .)
    WYPISZ          reduce using rule 5 (instrukcja -> funkcja .)
    ZWROC           reduce using rule 5 (instrukcja -> funkcja .)
    JEZELI          reduce using rule 5 (instrukcja -> funkcja .)
    WPISZ           reduce using rule 5 (instrukcja -> funkcja .)
    TEKST           reduce using rule 5 (instrukcja -> funkcja .)
    LA              reduce using rule 5 (instrukcja -> funkcja .)
    $end            reduce using rule 5 (instrukcja -> funkcja .)
    RB              reduce using rule 5 (instrukcja -> funkcja .)


state 6

    (6) instrukcja -> petla .

    ZALOZMY         reduce using rule 6 (instrukcja -> petla .)
    FUNKCJA         reduce using rule 6 (instrukcja -> petla .)
    DOPUKI          reduce using rule 6 (instrukcja -> petla .)
    IDENTYFIKATOR   reduce using rule 6 (instrukcja -> petla .)
    LICZBA          reduce using rule 6 (instrukcja -> petla .)
    WYPISZ          reduce using rule 6 (instrukcja -> petla .)
    ZWROC           reduce using rule 6 (instrukcja -> petla .)
    JEZELI          reduce using rule 6 (instrukcja -> petla .)
    WPISZ           reduce using rule 6 (instrukcja -> petla .)
    TEKST           reduce using rule 6 (instrukcja -> petla .)
    LA              reduce using rule 6 (instrukcja -> petla .)
    $end            reduce using rule 6 (instrukcja -> petla .)
    RB              reduce using rule 6 (instrukcja -> petla .)


state 7

    (7) instrukcja -> warunek .

    ZALOZMY         reduce using rule 7 (instrukcja -> warunek .)
    FUNKCJA         reduce using rule 7 (instrukcja -> warunek .)
    DOPUKI          reduce using rule 7 (instrukcja -> warunek .)
    IDENTYFIKATOR   reduce using rule 7 (instrukcja -> warunek .)
    LICZBA          reduce using rule 7 (instrukcja -> warunek .)
    WYPISZ          reduce using rule 7 (instrukcja -> warunek .)
    ZWROC           reduce using rule 7 (instrukcja -> warunek .)
    JEZELI          reduce using rule 7 (instrukcja -> warunek .)
    WPISZ           reduce using rule 7 (instrukcja -> warunek .)
    TEKST           reduce using rule 7 (instrukcja -> warunek .)
    LA              reduce using rule 7 (instrukcja -> warunek .)
    $end            reduce using rule 7 (instrukcja -> warunek .)
    RB              reduce using rule 7 (instrukcja -> warunek .)


state 8

    (8) instrukcja -> wypisz .

    ZALOZMY         reduce using rule 8 (instrukcja -> wypisz .)
    FUNKCJA         reduce using rule 8 (instrukcja -> wypisz .)
    DOPUKI          reduce using rule 8 (instrukcja -> wypisz .)
    IDENTYFIKATOR   reduce using rule 8 (instrukcja -> wypisz .)
    LICZBA          reduce using rule 8 (instrukcja -> wypisz .)
    WYPISZ          reduce using rule 8 (instrukcja -> wypisz .)
    ZWROC           reduce using rule 8 (instrukcja -> wypisz .)
    JEZELI          reduce using rule 8 (instrukcja -> wypisz .)
    WPISZ           reduce using rule 8 (instrukcja -> wypisz .)
    TEKST           reduce using rule 8 (instrukcja -> wypisz .)
    LA              reduce using rule 8 (instrukcja -> wypisz .)
    $end            reduce using rule 8 (instrukcja -> wypisz .)
    RB              reduce using rule 8 (instrukcja -> wypisz .)


state 9

    (9) instrukcja -> zwroc .

    ZALOZMY         reduce using rule 9 (instrukcja -> zwroc .)
    FUNKCJA         reduce using rule 9 (instrukcja -> zwroc .)
    DOPUKI          reduce using rule 9 (instrukcja -> zwroc .)
    IDENTYFIKATOR   reduce using rule 9 (instrukcja -> zwroc .)
    LICZBA          reduce using rule 9 (instrukcja -> zwroc .)
    WYPISZ          reduce using rule 9 (instrukcja -> zwroc .)
    ZWROC           reduce using rule 9 (instrukcja -> zwroc .)
    JEZELI          reduce using rule 9 (instrukcja -> zwroc .)
    WPISZ           reduce using rule 9 (instrukcja -> zwroc .)
    TEKST           reduce using rule 9 (instrukcja -> zwroc .)
    LA              reduce using rule 9 (instrukcja -> zwroc .)
    $end            reduce using rule 9 (instrukcja -> zwroc .)
    RB              reduce using rule 9 (instrukcja -> zwroc .)


state 10

    (10) instrukcja -> przypisz .

    ZALOZMY         reduce using rule 10 (instrukcja -> przypisz .)
    FUNKCJA         reduce using rule 10 (instrukcja -> przypisz .)
    DOPUKI          reduce using rule 10 (instrukcja -> przypisz .)
    IDENTYFIKATOR   reduce using rule 10 (instrukcja -> przypisz .)
    LICZBA          reduce using rule 10 (instrukcja -> przypisz .)
    WYPISZ          reduce using rule 10 (instrukcja -> przypisz .)
    ZWROC           reduce using rule 10 (instrukcja -> przypisz .)
    JEZELI          reduce using rule 10 (instrukcja -> przypisz .)
    WPISZ           reduce using rule 10 (instrukcja -> przypisz .)
    TEKST           reduce using rule 10 (instrukcja -> przypisz .)
    LA              reduce using rule 10 (instrukcja -> przypisz .)
    $end            reduce using rule 10 (instrukcja -> przypisz .)
    RB              reduce using rule 10 (instrukcja -> przypisz .)


state 11

    (11) instrukcja -> wywolanie .
    (44) wyrazenie -> wywolanie .

    ZALOZMY         reduce using rule 11 (instrukcja -> wywolanie .)
    FUNKCJA         reduce using rule 11 (instrukcja -> wywolanie .)
    DOPUKI          reduce using rule 11 (instrukcja -> wywolanie .)
    IDENTYFIKATOR   reduce using rule 11 (instrukcja -> wywolanie .)
    LICZBA          reduce using rule 11 (instrukcja -> wywolanie .)
    WYPISZ          reduce using rule 11 (instrukcja -> wywolanie .)
    ZWROC           reduce using rule 11 (instrukcja -> wywolanie .)
    JEZELI          reduce using rule 11 (instrukcja -> wywolanie .)
    WPISZ           reduce using rule 11 (instrukcja -> wywolanie .)
    TEKST           reduce using rule 11 (instrukcja -> wywolanie .)
    LA              reduce using rule 11 (instrukcja -> wywolanie .)
    $end            reduce using rule 11 (instrukcja -> wywolanie .)
    RB              reduce using rule 11 (instrukcja -> wywolanie .)
    PODZIELONE_PRZEZ reduce using rule 44 (wyrazenie -> wywolanie .)
    MNIEJSZE_OD     reduce using rule 44 (wyrazenie -> wywolanie .)
    WIEKSZE_OD      reduce using rule 44 (wyrazenie -> wywolanie .)
    WYNOSI          reduce using rule 44 (wyrazenie -> wywolanie .)
    ROZNE           reduce using rule 44 (wyrazenie -> wywolanie .)
    PLUS            reduce using rule 44 (wyrazenie -> wywolanie .)
    MINUS           reduce using rule 44 (wyrazenie -> wywolanie .)
    RAZY            reduce using rule 44 (wyrazenie -> wywolanie .)


state 12

    (12) instrukcja -> instr_warunkowa .

    ZALOZMY         reduce using rule 12 (instrukcja -> instr_warunkowa .)
    FUNKCJA         reduce using rule 12 (instrukcja -> instr_warunkowa .)
    DOPUKI          reduce using rule 12 (instrukcja -> instr_warunkowa .)
    IDENTYFIKATOR   reduce using rule 12 (instrukcja -> instr_warunkowa .)
    LICZBA          reduce using rule 12 (instrukcja -> instr_warunkowa .)
    WYPISZ          reduce using rule 12 (instrukcja -> instr_warunkowa .)
    ZWROC           reduce using rule 12 (instrukcja -> instr_warunkowa .)
    JEZELI          reduce using rule 12 (instrukcja -> instr_warunkowa .)
    WPISZ           reduce using rule 12 (instrukcja -> instr_warunkowa .)
    TEKST           reduce using rule 12 (instrukcja -> instr_warunkowa .)
    LA              reduce using rule 12 (instrukcja -> instr_warunkowa .)
    $end            reduce using rule 12 (instrukcja -> instr_warunkowa .)
    RB              reduce using rule 12 (instrukcja -> instr_warunkowa .)


state 13

    (13) instrukcja -> wpisz .

    ZALOZMY         reduce using rule 13 (instrukcja -> wpisz .)
    FUNKCJA         reduce using rule 13 (instrukcja -> wpisz .)
    DOPUKI          reduce using rule 13 (instrukcja -> wpisz .)
    IDENTYFIKATOR   reduce using rule 13 (instrukcja -> wpisz .)
    LICZBA          reduce using rule 13 (instrukcja -> wpisz .)
    WYPISZ          reduce using rule 13 (instrukcja -> wpisz .)
    ZWROC           reduce using rule 13 (instrukcja -> wpisz .)
    JEZELI          reduce using rule 13 (instrukcja -> wpisz .)
    WPISZ           reduce using rule 13 (instrukcja -> wpisz .)
    TEKST           reduce using rule 13 (instrukcja -> wpisz .)
    LA              reduce using rule 13 (instrukcja -> wpisz .)
    $end            reduce using rule 13 (instrukcja -> wpisz .)
    RB              reduce using rule 13 (instrukcja -> wpisz .)


state 14

    (14) deklaracja -> ZALOZMY . IDENTYFIKATOR ROWNE wyrazenie SEMIKOLON
    (15) deklaracja -> ZALOZMY . IDENTYFIKATOR ROWNE wywolanie SEMIKOLON

    IDENTYFIKATOR   shift and go to state 28


state 15

    (34) warunek -> IDENTYFIKATOR .
    (16) przypisz -> IDENTYFIKATOR . PRZYPISZ wyrazenie SEMIKOLON
    (17) przypisz -> IDENTYFIKATOR . LA LICZBA RA PRZYPISZ wyrazenie SEMIKOLON
    (54) wywolanie -> IDENTYFIKATOR . LP parametry RP
    (45) wyrazenie -> IDENTYFIKATOR .
    (49) wyrazenie -> IDENTYFIKATOR . LA LICZBA RA

  ! shift/reduce conflict for LA resolved as shift
    ZALOZMY         reduce using rule 34 (warunek -> IDENTYFIKATOR .)
    FUNKCJA         reduce using rule 34 (warunek -> IDENTYFIKATOR .)
    DOPUKI          reduce using rule 34 (warunek -> IDENTYFIKATOR .)
    IDENTYFIKATOR   reduce using rule 34 (warunek -> IDENTYFIKATOR .)
    LICZBA          reduce using rule 34 (warunek -> IDENTYFIKATOR .)
    WYPISZ          reduce using rule 34 (warunek -> IDENTYFIKATOR .)
    ZWROC           reduce using rule 34 (warunek -> IDENTYFIKATOR .)
    JEZELI          reduce using rule 34 (warunek -> IDENTYFIKATOR .)
    WPISZ           reduce using rule 34 (warunek -> IDENTYFIKATOR .)
    TEKST           reduce using rule 34 (warunek -> IDENTYFIKATOR .)
    $end            reduce using rule 34 (warunek -> IDENTYFIKATOR .)
    RB              reduce using rule 34 (warunek -> IDENTYFIKATOR .)
    PRZYPISZ        shift and go to state 29
    LA              shift and go to state 30
    LP              shift and go to state 31
    PODZIELONE_PRZEZ reduce using rule 45 (wyrazenie -> IDENTYFIKATOR .)
    MNIEJSZE_OD     reduce using rule 45 (wyrazenie -> IDENTYFIKATOR .)
    WIEKSZE_OD      reduce using rule 45 (wyrazenie -> IDENTYFIKATOR .)
    WYNOSI          reduce using rule 45 (wyrazenie -> IDENTYFIKATOR .)
    ROZNE           reduce using rule 45 (wyrazenie -> IDENTYFIKATOR .)
    PLUS            reduce using rule 45 (wyrazenie -> IDENTYFIKATOR .)
    MINUS           reduce using rule 45 (wyrazenie -> IDENTYFIKATOR .)
    RAZY            reduce using rule 45 (wyrazenie -> IDENTYFIKATOR .)

  ! LA              [ reduce using rule 34 (warunek -> IDENTYFIKATOR .) ]


state 16

    (29) warunek -> wyrazenie . PODZIELONE_PRZEZ wyrazenie
    (30) warunek -> wyrazenie . MNIEJSZE_OD wyrazenie
    (31) warunek -> wyrazenie . WIEKSZE_OD wyrazenie
    (32) warunek -> wyrazenie . WYNOSI wyrazenie
